syntax = "proto3";

package regen.ecocredit.marketplace.v1beta1;

import "google/protobuf/timestamp.proto";

message Filter {
  // or is a list of criteria for matching credit batches. A credit which
  // matches this filter must match at least one of these criteria.
  repeated Criteria or = 1;

  // Criteria is a simple filter criteria for matching a credit batch.
  message Criteria {
    // selector specifies the primary selector criteria. Every criteria
    // must specify a selector and every selector criteria must be based on
    // an assertion by some authority such as a credit class creator, credit
    // issuer, seller or curator.
    Selector selector = 1;

    // project_location can be specified in three levels of granularity:
    // country, sub-national-code, or postal code. If just country is given,
    // for instance "US" then any credits in the "US" will be matched even
    // their project location is more specific, ex. "US-NY 12345". If
    // a country, sub-national-code and postal code are all provided then
    // only projects in that postal code will match.
    string project_location = 2;

    // start_date is the beginning of the period during which a credit batch
    // was quantified and verified. If it is empty then there is no start date
    // limit.
    google.protobuf.Timestamp min_start_date = 3;

    // end_date is the end of the period during which a credit batch was
    // quantified and verified. If it is empty then there is no end date
    // limit.
    google.protobuf.Timestamp end_date = 4;
  }
}

enum SelectorType {
  SELECTOR_TYPE_UNDEFINED = 0;
  SELECTOR_TYPE_CLASS = 1;
  SELECTOR_TYPE_PROJECT = 2;
  SELECTOR_TYPE_BATCH = 3;
}

message Selector {
  SelectorType type = 1;
  oneof sum {
    uint64 uint64_value = 2;
  }
}

